Update popup.html to 1.5

--- a/app/pages/popup.html
+++ b/app/pages/popup.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
     <title>YT Anti Translate Options</title>
 </head>
 <style>
@@ -74,7 +75,9 @@
 </style>
 
 <body>
-    <div class="header">YT Anti Translate v1.4.4</div>
+    <div id="content">
+
+    <div class="header">YT Anti Translate v1.5</div>
 
     Status:
     <div class="status enabled" id="status">Enabled</div>
@@ -84,13 +87,9 @@
     <script src="/src/options.js"></script>
     <div class="footer">Don't forget to reload page (Ctrl+R) after enabling or disabling YT Anti Translate.</div>
 
-    <div class="footer">Please <a href="https://chrome.google.com/webstore/detail/yt-anti-translate/ndpmhjnlfkgfalaieeneneenijondgag">rate</a> this extension in Chrome Store if it helped you.
+    <div class="footer">Please <a href="https://addons.mozilla.org/en-US/firefox/addon/youtube-anti-translate/">rate</a> this extension in Firefox Addons if it helped you.
     </div>
 
-    <div class="changelog">
-        Changelog:<br>
-        1.4.4: used document.title to get original title<br>
-        1.4: description anti-translation added
     </div>
 </body>
 
