--- a/app/pages/popup.html
+++ b/app/pages/popup.html
@@ -76,7 +76,7 @@
 <body>
     <div id="content">
 
-    <div class="header">YT Anti Translate v1.5.14dev</div>
+    <div class="header">YT Anti Translate v1.5.14</div>
 
     Status:
     <div class="status enabled" id="status">Enabled</div>
